--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "udemy2-app",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "heroku-postbuild": "cd front && yarn install && yarn run build:production"
+  },
+  "devDependencies": {},
   "dependencies": {
     "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.1.5",
